:bug: Fix layout issue

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -20,6 +20,9 @@
     display: flex;
     flex-direction: column;
     justify-content: stretch;
-    margin-top: 1rem;
+    padding-top: 1rem;
+}
+
+.project-rows {
     box-shadow: 0 2px 2px rgb(0 0 0 / .15);
 }
